--- a/report/main.tex
+++ b/report/main.tex
@@ -133,19 +133,19 @@ We leverage Coq's type classes to represent CBC Casper at various levels of abst
 We construct a type class hierarchy showing the relationship between the various abstractions and the properties they derive. 
 In doing so, we 1) illuminate the assumptions that each property depend on, and 2) reformulate the protocol in general, mathematical terms. 
 We highlight two advantages of our approach: 1) from a proof engineering perspective, it enables a clean separation of concerns between theory and implementation; 2) from a protocol engineering perspective, it provides a rigorous, foundational understanding of the protocol which is conducive towards finding and proving stronger properties. We detail one such new property, namely strong non-triviality. 
-
 \end{abstract}
 
 \section{Overview} 
 In the first section we give an account of the motivating principles behind our formalization of CBC Casper, and the design choices they give rise to. For a motivation of CBC Casper at large, we refer the reader to \cite{CBCfull}. 
 
-In the second section we describe our formalization. We present our definition of CBC Casper as a Coq type class containing parameters and proofs, and explicate the safety properties provable from the abstract type class. 
+In the second section we describe our formalization. We present our abstraction hierarchy, with each level consisting of a type class containing a collection of parameters and axioms. We explicate 1) how the levels relate to one another, and 2) how desirable protocol properties such as safety, consistency and non-triviality are derived from each level. 
 
-In the third section we describe two concrete instantiations of our type class: a full node and light node member of the protocol family, as described in \cite{CBCfull} and \cite{CBClight} respectively. We focus on parameters in the abstract type class that are instantiated differently by the full node and light node protocols, and how this reflects the essential difference between them. In doing so, we highlight how type classes as an abstraction mechanism allow us to separate concerns between theory and implementation. 
+In the third section we present formalizations of two concrete protocols: a full node and light node version of CBC Casper, as described in \cite{CBCfull} and \cite{CBClight} respectively. We show how our concrete definitions instantiate an abstract type class. We highlight parameters in the type class that are instantiated differently between the full and light node versions, and explain how this reflects the essential differences between the protocols. In doing so, we illustrate how using type classes as an abstraction mechanism allows us to separate concerns between theory and implementation. 
 
-In the fourth section we present a new proof of a stronger non-triviality property for both the full node and light node protocols, inspired by the statement of non-triviality of decisions on protocol properties in \cite{CBCfull}. We discuss our ongoing attempts to abstract this proof to the same degree as the safety proofs. In the process, we highlight how our design choices invite a precise characterization of the assumptions required for each property, which gives rise to a more rigorous understanding of CBC Casper in general mathematical terms.  
+In the fourth section we present a new proof of a protocol property, which we call strong non-triviality, for both the full node and light node protocols. We highlight how our abstraction hierarchy invites a precise mathematical characterization of CBC Casper, which paves the way for us to look for and prove stronger properties. We discuss our ongoing attempts at refining our abstraction hierarchy. 
 
-In the fifth section we discuss future directions, related work, and conclude. 
+In the final section, we discuss related work, and conclude. 
+
 
 \section{Design choices} 
 A salient property of the CBC Casper family of protocols, as captured in its ``correct-by-construction'' namesake, is that desirable properties such as safety and liveness are guaranteed independently of the specific details of each protocol, such as information about nodes, consensus values, etc. However, these properties do rely on certain implicit or explicit assumptions about the parameters used to complete the partial specification of any CBC Casper protocol. Our goal was to both formalize and generalize the existing partial specification of CBC Casper protocols. Our design choices primarily aimed at making these assumptions explicit. Subsequently, we wished to characterize these assumptions and properties in general mathematical terms, abstracting away from protocol-specific language. This required us to precisely pinpoint the minimal assumptions required for each desirable property and formulate a suitable abstraction to highlight the relationship between assumptions and derivable properties. 
